fixed line endings for the input/output data and solution sources fixed overlapping of rht rating table

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -152,3 +152,7 @@
 #task-main-text table {
     width:100%;
 }
+
+.table-responsive {
+    overflow: auto;
+}
